--- a/src/partials/elements/_container.sass
+++ b/src/partials/elements/_container.sass
@@ -59,4 +59,23 @@
   // 浮動寬度的容器。
 
   &.fluid
-    width: 100%
+    max-width: 100% !important
+    width    : 100%
+    
+  
+  
+  // [&] Aligned
+  //
+  // 文字對齊。
+  
+  &[class*="center aligned"]
+    text-align: center
+  
+  &[class*="left aligned"]
+    text-align: left
+    
+  &[class*="right aligned"]
+    text-align: right
+  
+  &[class*="justified"]
+    text-align: justify
