--- a/src/partials/elements/_label.sass
+++ b/src/partials/elements/_label.sass
@@ -133,7 +133,7 @@
   text-shadow: none
   font-weight: 600
   line-height: 1.35em
-  vertical-align: top
+  //vertical-align: top
   
   
   
