--- a/src/partials/elements/_segment.sass
+++ b/src/partials/elements/_segment.sass
@@ -75,6 +75,7 @@
   
   &.fluid
     border-radius: 0
+    border: none
   
   
   
