--- a/src/tocas.sass
+++ b/src/tocas.sass
@@ -107,7 +107,8 @@
 p:not(:first-child)
   +y-margin(.8em)
 
-
+p:last-child
+  +y-margin(x, 0)
 
 
 
